# dspy_metric_learning

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: anthropic_example.py  basic_usage.py  complete_workflow.py  multiple_metrics.py  ollama_example.py  openai_example.py  openrouter_example.py  streamlit_app.py
integration_tests/: README.md  test_end_to_end.py
metric_learner/: __init__.py  data_manager.py  learner.py  metric_module.py  optimization.py  repl_interface.py
tests/: test_data_manager.py  test_integration.py  test_learner.py  test_metric_module.py  test_optimization.py  test_repl_interface.py
